# c

./: .gitignore
make_test/: .gitignore  CMakeLists.txt  Makefile  app.mk  env_gen.sh
make_test/app_a/: CMakeLists.txt  Makefile
make_test/app_a/include/: app_a.h
make_test/app_a/m/: m.c
make_test/app_a/src/: main.c
make_test/app_b/: Makefile
make_test/app_b/include/: app_b.h
make_test/app_b/m/: m.cpp
make_test/app_b/src/: c_test.c  main.cpp
make_test/lib_a_so/: Makefile
make_test/lib_a_so/include/: lib_a.h
make_test/lib_a_so/src/: lib_a.c
make_test/lib_b_so/: CMakeLists.txt  Makefile
make_test/lib_b_so/include/: lib_b.h
make_test/lib_b_so/src/: lib_b.c
make_test/opensource/: .gitignore  autobuild.sh  common.sh
make_test/opensource/RCF/: Makefile  autobuild.sh
make_test/opensource/buildroot/arm-linux-a32-20200204/: autobuild.sh  buildroot-2020.02.4.tar.bz2  config
make_test/opensource/buildroot/arm-ov-linux-20210322/: buildroot-2021.02.tar.bz2  config
make_test/opensource/buildroot/buildroot-2021.02/: build_env.sh  config.arm-ov-linux-20210322
make_test/opensource/busybox/: autobuild.sh  busybox-nc.patch  oa8000_defconfig
make_test/opensource/cJSON/: Makefile  autobuild.sh
make_test/opensource/can-utils/: autobuild.sh  can-utils.tgz
make_test/opensource/cli/: Makefile  autobuild.sh
make_test/opensource/cli/src/: cli.cpp  command_line.cpp  command_line_edition.cpp  command_line_edition.h  command_line_history.cpp  command_line_history.h  config_menu.cpp  config_menu.h  consistency.cpp  consistency.h  constraints.h  debug.cpp  element.cpp  encoding.cpp  encoding.h  endl.cpp  exec_context.cpp  exec_context_manager.cpp  exec_context_manager.h  file_device.cpp  help.cpp  io_device.cpp  io_mux.cpp  keyword.cpp  menu.cpp  ncurses_console.cpp  non_blocking_io_device.cpp  object.cpp  param.cpp  param_float.cpp  param_host.cpp  param_int.cpp  param_string.cpp  resource_string.cpp  shell.cpp  single_command.cpp  string_device.cpp  syntax_node.cpp  syntax_tag.cpp  telnet.cpp  (+17 more)
make_test/opensource/crash_catcher/: CMakeLists.txt  CrashDumper.cpp  CrashDumper.h  Makefile  autobuild.sh  crash_catcher_collect_info.cpp  crash_catcher_collect_info.h  crash_catcher_signal_handler.c  crash_catcher_type.h  main.cpp  test_main.cpp
make_test/opensource/crash_catcher/build_out/: crash_catcher  test_main
make_test/opensource/curl/: autobuild.sh
make_test/opensource/dnsmasq/: autobuild.sh  dnsmasq.conf
make_test/opensource/dosfstools/: autobuild.sh  dosfstools.patch  fsck.fat
make_test/opensource/ethtool/: autobuild.sh
make_test/opensource/exfat/: autobuild.sh
make_test/opensource/host/squashfs/: autobuild.sh
make_test/opensource/hostapd/: autobuild.sh  hostapd-2.9.patch  hostapd-2.9_forceht40.patch
make_test/opensource/i2c-tools/: autobuild.sh
make_test/opensource/iperf/: autobuild.sh  iperf_20210322.patch  readme.txt
make_test/opensource/iproute2/: autobuild.sh
make_test/opensource/iptables/: autobuild.sh
make_test/opensource/iw/: autobuild.sh  iw-5.9.patch
make_test/opensource/libjpeg/: autobuild.sh
make_test/opensource/libmp4/: autobuild.sh  libmp4.patch  readme.txt
make_test/opensource/libncurses/: autobuild.sh
make_test/opensource/libncurses/ncurses-5.9/: Makefile  config.status  edit_man.sh  log.config
make_test/opensource/libnl/: autobuild.sh
make_test/opensource/libosp/: CMakeLists.txt
make_test/opensource/libosp/include/: common.h  efuse.h  type_def.h
make_test/opensource/libosp/src/: common.cpp  efuse.c
make_test/opensource/librtmp/: Makefile  autobuild.sh
make_test/opensource/librtmp/src/: amf.c  hashswf.c  rtmp.c
make_test/opensource/libuuid/: autobuild.sh
make_test/opensource/libuuid/libuuid-1.0.3/: Makefile  config.status  libtool
make_test/opensource/libxml2/: autobuild.sh
make_test/opensource/lighttpd/: autobuild.sh  install.sh  readme.txt
make_test/opensource/lighttpd/html/: start.sh
make_test/opensource/linuxptp/: autobuild.sh
make_test/opensource/lrzsz/: autobuild.sh  lrzsz-0.12.20.patch
make_test/opensource/ltp/: autobuild.sh  ltp-config.patch  ltp-full-20220121.tar.bz2
make_test/opensource/mosquitto/: autobuild.sh  mosquitto_01.patch
make_test/opensource/mosquitto/mosquitto-2.0.14/: config.mk
make_test/opensource/mtd-utils/: autobuild.sh  e2fsprogs_v1.42.9_devname.patch
make_test/opensource/nginx/: autobuild.sh  nginx-1.21.0.patch
make_test/opensource/nginx/nginx-cgi/: autobuild.sh  fcgi-2.4.1.patch  fcgiwrap.patch  spawn-fcgi-1.6.4.patch
make_test/opensource/nginx/pcre/: autobuild.sh  pcre-8.45.tar.bz
make_test/opensource/openblas/: autobuild.sh
make_test/opensource/openssh/: autobuild.sh
make_test/opensource/openssh/ssh.key/: ssh_host_ecdsa_key  (+5 more)
make_test/opensource/openssl/: autobuild.sh
make_test/opensource/paho-mqtt-c/: autobuild.sh
make_test/opensource/paho-mqtt-cpp/: autobuild.sh
make_test/opensource/procrank/: CMakeLists.txt  autobuild.sh
make_test/opensource/python/: autobuild.sh  config
make_test/opensource/quirc/: Makefile  autobuild.sh
make_test/opensource/rtmpdump/: autobuild.sh
make_test/opensource/strace/: autobuild.sh
make_test/opensource/tcpdump/: autobuild.sh
make_test/opensource/tinyalsa/: autobuild.sh  tinyalsa.diff
make_test/opensource/wpa_supplicant/: autobuild.sh  wpa_supplicant-2.5.patch  wpa_supplicant-2.5_01.patch
make_test/opensource/yaml-cpp/: autobuild.sh
make_test/test/: CMakeLists.txt  Makefile
uart/: CMakeLists.txt
uart/include/: cli_agent_api.hpp  cli_agent_args.hpp  cli_agent_client_config.hpp  cli_agent_common.hpp  cli_agent_mcu.hpp  cli_agent_mcu_atbm6441.hpp  cli_agent_mcu_bl616.hpp  cli_agent_mcu_io_device.hpp  cli_agent_mcu_io_uart.hpp
uart/res/: clean_outlog.py  cli.rng  cli.xsd  cli2cpp.py  cli2cpp.xsl  cli2help.py  cli2help.xsl  cli_agent_client_config.xml  clicommon.py  modlog.py  pylint.conf  xmldoc.py
uart/src/: cli_agent_api.cpp  cli_agent_common.cpp  cli_agent_mcu.cpp  cli_agent_mcu_atbm6441.cpp  cli_agent_mcu_bl616.cpp  cli_agent_mcu_io_device.cpp  cli_agent_mcu_io_uart.cpp  main.cpp
(+954 files in other folders)
